Add Contentful migrations and type generation tooling

--- a/package.json
+++ b/package.json
@@ -36,8 +36,13 @@
     "@babel/preset-typescript": "^7.23.3",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
+    "@graphql-codegen/cli": "^5.0.2",
+    "@graphql-codegen/typescript": "^4.1.0",
+    "@graphql-codegen/typescript-operations": "^4.3.0",
     "babel-jest": "^29.7.0",
     "babel-preset-gatsby": "^3.9.0",
+    "contentful-cli": "^3.3.0",
+    "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
@@ -56,6 +61,8 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
+    "codegen": "graphql-codegen --config codegen.js",
+    "contentful:migrate": "contentful space migration --space-id $CONTENTFUL_SPACE_ID --environment-id $CONTENTFUL_ENVIRONMENT --access-token $CONTENTFUL_MANAGEMENT_TOKEN",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,css}\"",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "start": "gatsby develop",
