--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "babel-jest": "^29.7.0",
     "babel-preset-gatsby": "^3.9.0",
     "contentful-cli": "^3.3.0",
+    "dotenv-cli": "^7.4.2",
     "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
@@ -62,7 +63,7 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "codegen": "graphql-codegen --config codegen.js",
-    "contentful:migrate": "contentful space migration --space-id $CONTENTFUL_SPACE_ID --environment-id $CONTENTFUL_ENVIRONMENT --access-token $CONTENTFUL_MANAGEMENT_TOKEN",
+    "contentful:migrate": "dotenv -e .env.development -e .env -- sh -c 'contentful space migration --space-id \"$CONTENTFUL_SPACE_ID\" --environment-id \"$CONTENTFUL_ENVIRONMENT\" --management-token \"$CONTENTFUL_MANAGEMENT_TOKEN\" \"$@\"' --",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,css}\"",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "start": "gatsby develop",
