move styles outside components

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 CONTENTFUL_SPACE_ID=your_space_id
 CONTENTFUL_ACCESS_TOKEN=your_delivery_access_token
 CONTENTFUL_MANAGEMENT_TOKEN=your_management_token
-CONTENTFUL_ENVIRONMENT=master
-CONTENTFUL_LOCALE=en-US
+CONTENTFUL_ENVIRONMENT=
+CONTENTFUL_LOCALE=
